# src/api/user.go
@@ -3,10 +3,16 @@ package api
 import (
 	"net/http"
 	"primary/api/middleware/authorization"
+	"primary/utils"
 	"strconv"
 
 	"github.com/gin-gonic/gin"
+	"golang.org/x/crypto/bcrypt"
 )
+
+type NewPassword struct {
+	Password string `form:"password" json:"password" xml:"password" binding:"required"`
+}
 
 func getServersHandler(c *gin.Context) {
 	userid64, err := strconv.ParseUint(c.Param("userid"), 10, 64)
@@ -39,6 +45,34 @@ func removeUserHandler(c *gin.Context) { // TODO: add authentication
 	c.JSON(http.StatusOK, gin.H{"status": "deleted user " + strconv.FormatInt(int64(userid64), 10)})
 }
 
+func changePasswordHandler(c *gin.Context) {
+	claims, err := utils.GetClaims(c)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "faulty token"})
+		return
+	}
+
+	userID := claims.Userid
+
+	var newPassword NewPassword
+	if err := c.Bind(&newPassword); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "could not read password"})
+		return
+	}
+	bytes, err := bcrypt.GenerateFromPassword([]byte(newPassword.Password), 11)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "could not hash password"})
+		return
+	}
+
+	if err = db.ChangeUserPasswordByID(userID, string(bytes)); err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "could not update password"})
+		return
+	}
+
+	c.JSON(http.StatusOK, gin.H{"status": "password updated"})
+}
+
 func AddUserRoutes(grp *gin.RouterGroup) {
 	grp.DELETE("/:userid", func(c *gin.Context) {
 		authorization.AuthorizeMiddleware(c, db, authorization.CheckGlobalAdmin, authorization.CheckSameUser)
@@ -46,4 +80,7 @@ func AddUserRoutes(grp *gin.RouterGroup) {
 	grp.GET("/:userid/servers", func(c *gin.Context) {
 		authorization.AuthorizeMiddleware(c, db, authorization.CheckGlobalAdmin, authorization.CheckSameUser)
 	}, getServersHandler)
+	grp.POST("/:userid/changepassword", func(c *gin.Context) {
+		authorization.AuthorizeMiddleware(c, db, authorization.CheckGlobalAdmin, authorization.CheckSameUser)
+	}, changePasswordHandler)
 }
